CRUD operation for users create,read,update and delete
